added animation to flips

--- a/views/cards/cards-style.css
+++ b/views/cards/cards-style.css
@@ -8,18 +8,27 @@
 
 .not-selectable {
     pointer-events: none;
+/*
+    animation-name: flipInY;
+	-webkit-backface-visibility: visible !important;
+	backface-visibility: visible !important;
+	animation-duration: .75s;
+*/
 }
 
 .layer {
     position: absolute;
     top: 0;
-    left: 0;
+    left: 6%;
     width: 90%;
-/*    height: 95%;*/
     padding: 42.5%;
     pointer-events: none;
-    transform: translate(6%);
     border-radius: 5px;
+    animation-name: flipInY;
+	-webkit-backface-visibility: visible !important;
+	backface-visibility: visible !important;
+	animation-duration: .75s;
+    pointer-events: none;
 }
 
 .layer-blue {
@@ -69,49 +78,5 @@
 
 	to {
 		transform: perspective(400px);
-	}
-}
-
-@keyframes rubberBand {
-	from {
-		transform: scale3d(1, 1, 1);
-	}
-
-	30% {
-		transform: scale3d(1.25, 0.75, 1);
-	}
-
-	40% {
-		transform: scale3d(0.75, 1.25, 1);
-	}
-
-	50% {
-		transform: scale3d(1.15, 0.85, 1);
-	}
-
-	65% {
-		transform: scale3d(.95, 1.05, 1);
-	}
-
-	75% {
-		transform: scale3d(1.05, .95, 1);
-	}
-
-	to {
-		transform: scale3d(1, 1, 1);
-	}
-}
-
-@keyframes pulse {
-	from {
-		transform: scale3d(1, 1, 1);
-	}
-
-	50% {
-		transform: scale3d(1.2, 1.2, 1.2);
-	}
-
-	to {
-		transform: scale3d(1, 1, 1);
 	}
 }
