--- a/views/main/main-page.html
+++ b/views/main/main-page.html
@@ -1,5 +1,5 @@
 <link href="views/main/main-view-style.css" rel="stylesheet">
-<div class="main-view-wrapper">
+<div class="main-view-wrapper content-in">
     <h2>
         Is your memory as accurate as you think it is?
     </h2>
