--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,10 +1,55 @@
-html, body {
+html,
+body {
     font-family: 'Gamja Flower', cursive;
     background-color: #f3f0eb;
     color: #666;
 }
 
-.btn-primary{
-    background-color: rgba(0,114,206, 0.9);
+.btn-primary {
+    background-color: rgba(0, 114, 206, 0.9);
     font-size: 2em;
 }
+
+.logo-container {
+    vertical-align: middle;
+    padding: 20px 0;
+    font-size: 4em;
+    text-align: center;
+}
+
+.content-in {
+    -webkit-animation: fadein 2.5s; /* Safari and Chrome */
+    -moz-animation: fadein 2.5s; /* Firefox */
+    -ms-animation: fadein 2.5s; /* Internet Explorer */
+    -o-animation: fadein 2.5s; /* Opera */
+    animation: fadein 2.5s;
+}
+    
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari and Chrome */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}​
+
+/* Opera */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}​
