--- a/views/cards/cards-view.html
+++ b/views/cards/cards-view.html
@@ -7,10 +7,17 @@
     <div class="container-fluid row content-in" ng-class="{ 'not-selectable' : !ctrl.isSelectable }">
         <div ng-repeat="image in ctrl.imagesIDs">
             <div class="clearfix" ng-if="$index % 4 == 0"></div>
-            <div class="col-xs-3 image-wrapper" ng-click="ctrl.selectImage(image)" ng-class="{ 'not-selectable' : ctrl.imageData[image].isAlreadySelected }">
-                <div class="" ng-class="{ 'layer' : !ctrl.imageData[image].isAlreadySelected }" ng-class-odd="'layer-blue'" ng-class-even="'layer-yellow'"></div>
-                <img ng-src="{{ ctrl.imageData[image].image }}" id="{{image}}" class="img-responsive img-rounded" 
+            <div class="col-xs-3 image-wrapper" ng-click="ctrl.selectImage(image)" 
+                 ng-class="{ 'not-selectable' : ctrl.imageData[image].isAlreadySelected }">
+                
+                <div class="" 
+                     ng-class="{ 'layer' : !ctrl.imageData[image].isAlreadySelected }" 
+                     ng-class-odd="'layer-blue'" 
+                     ng-class-even="'layer-yellow'"></div>
+                <img ng-src="{{ ctrl.imageData[image].image }}" 
+                     id="{{image}}" class="img-responsive img-rounded" 
                      ng-class="{ 'show-img' : ctrl.imageData[image].isAlreadySelected }">
+                
             </div>
         </div>
     </div>
